print best odds for avg results

--- a/src/initial.ipynb
+++ b/src/initial.ipynb
@@ -2,35 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import os\n",
     "import pandas as pd\n",
-    "from importlib.metadata import files\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_5430/3726563229.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_39701/3453979798.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(contents[columns])\n",
-      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_5430/3726563229.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_39701/3453979798.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(contents[columns])\n",
-      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_5430/3726563229.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df = df.append(contents[columns])\n",
-      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_5430/3726563229.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df = df.append(contents[columns])\n",
-      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_5430/3726563229.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_39701/3453979798.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(contents[columns])\n"
      ]
     },
@@ -60,6 +55,9 @@
        "      <th>FTHG</th>\n",
        "      <th>FTAG</th>\n",
        "      <th>FTR</th>\n",
+       "      <th>AvgH</th>\n",
+       "      <th>AvgD</th>\n",
+       "      <th>AvgA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,6 +68,9 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>A</td>\n",
+       "      <td>5.94</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>1.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -78,6 +79,9 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>H</td>\n",
+       "      <td>3.18</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>2.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -86,6 +90,9 @@
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>H</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>5.96</td>\n",
+       "      <td>9.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -94,6 +101,9 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>A</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>3.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -102,21 +112,24 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>A</td>\n",
+       "      <td>3.87</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>1.97</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         HomeTeam     AwayTeam  FTHG  FTAG FTR\n",
-       "0          Fulham      Arsenal     0     3   A\n",
-       "1  Crystal Palace  Southampton     1     0   H\n",
-       "2       Liverpool        Leeds     4     3   H\n",
-       "3        West Ham    Newcastle     0     2   A\n",
-       "4       West Brom    Leicester     0     3   A"
+       "         HomeTeam     AwayTeam  FTHG  FTAG FTR  AvgH  AvgD  AvgA\n",
+       "0          Fulham      Arsenal     0     3   A  5.94  4.34  1.55\n",
+       "1  Crystal Palace  Southampton     1     0   H  3.18  3.22  2.39\n",
+       "2       Liverpool        Leeds     4     3   H  1.30  5.96  9.68\n",
+       "3        West Ham    Newcastle     0     2   A  2.15  3.48  3.42\n",
+       "4       West Brom    Leicester     0     3   A  3.87  3.57  1.97"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +138,7 @@
     "# Read in the data\n",
     "directory = '../data/'\n",
     "extension = '.csv'\n",
-    "columns = ['HomeTeam', 'AwayTeam', 'FTHG', 'FTAG', 'FTR']\n",
+    "columns = ['FTR', 'AvgH', 'AvgD', 'AvgA', 'B365H', 'B365D', 'B365A']\n",
     "\n",
     "df = pd.DataFrame()\n",
     "\n",
@@ -137,8 +150,188 @@
     "            contents = pd.read_csv(os.path.join(dirpath, file))\n",
     "            df = df.append(contents[columns])\n",
     "\n",
+    "# Print the first 5 rows of the DataFrame\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/7y/v7whc3tn0fl5rddh_2ql4n3m0000gn/T/ipykernel_39701/405327070.py:45: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  dfFaixas.at[faixa, '% Real'] = ((\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>% Odd</th>\n",
+       "      <th>% Real</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.5</th>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.8</th>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.3</th>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.4</th>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.8</th>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.2</th>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.3</th>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.5</th>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.1</th>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.3</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.6</th>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     % Odd  % Real\n",
+       "1.5   0.67    0.69\n",
+       "1.8   0.56    0.61\n",
+       "2.3   0.43    0.48\n",
+       "2.4   0.42    0.43\n",
+       "2.8   0.36    0.38\n",
+       "3.2   0.31    0.32\n",
+       "3.3   0.30    0.32\n",
+       "3.5   0.29    0.33\n",
+       "4.1   0.24    0.35\n",
+       "4.3   0.23    0.26\n",
+       "4.6   0.22    0.24"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Agora, vamos analisar a taxa de acertos das faixas de odds\n",
+    "# Indo de 1.0 a 10.0, com 0.1 de intervalo, temos 99 faixas\n",
+    "# Vamos criar um dataframe com essas faixas e inserir a quantidade de acertos\n",
+    "# FTR será utilizado para dizer qual foi o resultado do jogo: H, D ou A\n",
+    "# AvgH, AvgD e AvgA serão utilizados para dizer qual foi a odd média do jogo\n",
+    "\n",
+    "# Todas as colunas que possuem odds:\n",
+    "oddsColumns = ['AvgH', 'AvgD', 'AvgA']\n",
+    "\n",
+    "# Arredondando as oddsColums para apenas 1 casa decimal:\n",
+    "for column in oddsColumns:\n",
+    "    df[column] = df[column].round(1)\n",
+    "\n",
+    "# Criando as faixas de odds:\n",
+    "faixas = np.linspace(1.0, 10.0, 99).round(1)\n",
+    "\n",
+    "# Colunas do dataframe que será criado:\n",
+    "# % Odd: 1 / odd - percentual de acerto que a odd teria que ter para ser lucrativa\n",
+    "# % Real: (quantidade de acertos) / (quantidade de jogos) - percentual de acerto real\n",
+    "# AvgHT: quantidade de jogos com odd média de vitória do time da casa igual a faixa\n",
+    "# AvgHR: quantidade de acertos com odd média de vitória do time da casa igual a faixa\n",
+    "# AvgDT: quantidade de jogos com odd média de empate igual a faixa\n",
+    "# AvgDR: quantidade de acertos com odd média de empate igual a faixa\n",
+    "# AvgAT: quantidade de jogos com odd média de vitória do time visitante igual a faixa\n",
+    "# AvgAR: quantidade de acertos com odd média de vitória do time visitante igual a faixa\n",
+    "faixasColumns = ['% Odd', '% Real', 'AvgHT', 'AvgHR', 'AvgDT', 'AvgDR', 'AvgAT', 'AvgAR']\n",
+    "\n",
+    "# Criando o dataframe:\n",
+    "dfFaixas = pd.DataFrame(0, index=faixas, columns=faixasColumns)\n",
+    "\n",
+    "# Extraindo as odds médias de cada resultado:\n",
+    "FTRH = df['AvgH'][df['FTR'] == 'H']\n",
+    "FTRD = df['AvgD'][df['FTR'] == 'D']\n",
+    "FTRA = df['AvgA'][df['FTR'] == 'A']\n",
+    "\n",
+    "# Preenchendo o dataframe com as informações:\n",
+    "for faixa in faixas:\n",
+    "    dfFaixas.at[faixa, 'AvgHT'] = (df['AvgH'] == faixa).sum()\n",
+    "    dfFaixas.at[faixa, 'AvgHR'] = (FTRH == faixa).sum()\n",
+    "    dfFaixas.at[faixa, 'AvgDT'] = (df['AvgD'] == faixa).sum()\n",
+    "    dfFaixas.at[faixa, 'AvgDR'] = (FTRD == faixa).sum()\n",
+    "    dfFaixas.at[faixa, 'AvgAT'] = (df['AvgA'] == faixa).sum()\n",
+    "    dfFaixas.at[faixa, 'AvgAR'] = (FTRA == faixa).sum()\n",
+    "    dfFaixas.at[faixa, '% Odd'] = (1/faixa).round(2)\n",
+    "    dfFaixas.at[faixa, '% Real'] = ((\n",
+    "        dfFaixas.at[faixa, 'AvgHR'] + dfFaixas.at[faixa, 'AvgDR'] + dfFaixas.at[faixa, 'AvgAR']) / (\n",
+    "            dfFaixas.at[faixa, 'AvgHT'] + dfFaixas.at[faixa, 'AvgDT'] + dfFaixas.at[faixa, 'AvgAT'])).round(2)\n",
+    "\n",
+    "# Visualizando as linhas em que a taxa de acerto é maior que a taxa de odd, e a quantidade total de jogos é maior que 10 * quantidade de files\n",
+    "# Imprimir apenas o indice e as colunas % Odd, % Real\n",
+    "dfFaixas[(dfFaixas['% Real'] > dfFaixas['% Odd']) & ((dfFaixas['AvgHT'] + dfFaixas['AvgDT'] + dfFaixas['AvgAT']) > 10 * len(files))][['% Odd', '% Real']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
