--- a/src/initial.ipynb
+++ b/src/initial.ipynb
@@ -99,22 +99,31 @@
    ],
    "source": [
     "# Ler arquivos csv do diretorio de dados\n",
-    "dir = '../data/Brasileirao'\n",
+    "dir = '../data/'\n",
     "ext = '.csv'\n",
     "\n",
-    "history = pd.DataFrame()\n",
+    "history = {}\n",
     "columns = ['FTR', 'AvgH', 'AvgD', 'AvgA']\n",
     "\n",
-    "# Iterar por todos os arquivos do diretorio\n",
+    "# Iterar por todos os subdiretórios, concatenando todos os arquivos de cada subdiretório em um dataframe\n",
     "for dirpath, dirnames, files in os.walk(dir):\n",
-    "    for file in files:\n",
-    "        if file.endswith(ext):\n",
-    "            # Abrir arquivo e adicionar ao DataFrame\n",
-    "            contents = pd.read_csv(os.path.join(dirpath, file))\n",
-    "            history = pd.concat([history, contents[columns]])\n",
+    "    for dirname in dirnames:\n",
+    "        # Ignorar diretórios que começam com '-'\n",
+    "        if dirname.startswith('-'):\n",
+    "            continue\n",
     "\n",
-    "# Imprimir 5 primeiras linhas\n",
-    "history.head()"
+    "        df = pd.DataFrame()\n",
+    "        for file in os.listdir(os.path.join(dir, dirname)):\n",
+    "            if file.endswith(ext):\n",
+    "                content = pd.read_csv(os.path.join(dir, dirname, file))\n",
+    "                df = pd.concat([df, content])\n",
+    "        history[dirname] = df[columns]\n",
+    "\n",
+    "# Imprimir 5 primeiras linhas de cada dataframe\n",
+    "for key in history:\n",
+    "    print(key)\n",
+    "    print(history[key].head())\n",
+    "    print('\\n')"
    ]
   },
   {
